[package]
name = "feagi-bdu"
version = "0.1.0"
edition = "2021"
authors = ["FEAGI Team"]
description = "Brain Development Utilities - Synaptogenesis and Connectivity"

[lib]
crate-type = ["rlib"]
name = "feagi_bdu"

[dependencies]
# Core types from existing FEAGI crates
feagi-types = { path = "../feagi-types" }
feagi-burst-engine = { path = "../feagi-burst-engine" }

# Performance (using workspace versions)
rayon = { workspace = true }
ndarray = { workspace = true }
ahash = { workspace = true }
roaring = "0.10"  # Roaring bitmaps for spatial indexing

# Serialization (for debugging)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling (using workspace version)
thiserror = { workspace = true }

# Logging
log = "0.4"

# Random number generation
rand = "0.8"

[dev-dependencies]
criterion = "0.5"       # Benchmarking
proptest = "1.4"        # Property-based testing

# Benchmarks will be added in Phase 2
# [[bench]]
# name = "synaptogenesis"
# harness = false

# Profile configuration is inherited from workspace root
# See feagi-rust/Cargo.toml for release profile settings

