[package]
name = "feagi-bdu"
version = "2.0.0"
edition = "2021"
authors = ["FEAGI Team"]
description = "Brain Development Utilities - Synaptogenesis and Connectivity"

[lib]
crate-type = ["rlib"]
name = "feagi_bdu"

[dependencies]
# Core types from existing FEAGI crates
feagi-neural = { path = "../feagi-neural" }  # For types (CorticalArea, Dimensions, etc.)
feagi-evo = { path = "../feagi-evo" }
# feagi-burst-engine configured per-platform below
feagi_data_structures = { workspace = true }

# Performance (using workspace versions)
rayon = { workspace = true, optional = true }  # Optional - not available in WASM
ndarray = { workspace = true }
ahash = { workspace = true }
roaring = "0.10"  # Roaring bitmaps for spatial indexing

# Serialization (for debugging)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling (using workspace version)
thiserror = { workspace = true }

# Timestamp generation for genome save
chrono = "0.4"

# Observability
feagi-observability = { workspace = true }
tracing = "0.1"  # Required for tracing macros

# Concurrency & singleton
once_cell = "1.19"
parking_lot = "0.12"

# Logging (replaced by feagi-observability)
# log = "0.4"  # Removed - use feagi-observability instead

# Random number generation - platform-specific
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = "0.8"
# Use async-tokio feature for desktop builds
feagi-burst-engine = { path = "../feagi-burst-engine", default-features = false, features = ["async-tokio"] }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
# Use wasm feature for WASM builds (no tokio)
feagi-burst-engine = { path = "../feagi-burst-engine", default-features = false, features = ["wasm"] }

[features]
default = ["parallel"]
# Parallel processing via rayon (not available in WASM)
parallel = ["rayon"]
# WASM-compatible build (disables connectome-io and parallel processing)
wasm = []

[dev-dependencies]
criterion = "0.5"       # Benchmarking
proptest = "1.4"        # Property-based testing
feagi-runtime-std = { path = "../feagi-runtime-std" }

# Benchmarks will be added in Phase 2
# [[bench]]
# name = "synaptogenesis"
# harness = false

# Profile configuration is inherited from workspace root
# See feagi-rust/Cargo.toml for release profile settings

