[package]
name = "feagi-config"
version = "2.0.0"
edition = "2021"
authors = ["Neuraville Inc. <feagi@neuraville.com>"]
license = "Apache-2.0"
description = "Configuration loader for FEAGI - Cross-platform TOML-based configuration with override support"
repository = "https://github.com/feagi/feagi-core"
readme = "README.md"
keywords = ["config", "toml", "feagi", "neural-network"]
categories = ["config"]

[features]
default = ["std"]

# Standard library support (full config loading)
std = ["toml", "serde/std"]

# No standard library (embedded/RTOS - compile-time config)
no_std = ["serde/alloc"]

# WASM support (config provided via JavaScript)
wasm = []

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
toml = { version = "0.8", optional = true }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.8"




