[package]
name = "feagi-connectome-serialization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Connectome serialization/deserialization for FEAGI inference engine"

[dependencies]
# feagi-types merged into feagi-neural (Phase 2)
# feagi-npu-neural = { version = "0.0.0", path = "../feagi-npu/neural" }  # Not currently needed

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"  # Fast binary serialization

# Fast hashing
ahash.workspace = true

# Error handling
thiserror.workspace = true

# Compression (optional feature)
lz4 = { version = "1.24", optional = true }

[features]
default = ["compression"]  # LZ4 compression enabled by default
compression = ["lz4"]

[dev-dependencies]
tempfile = "3.8"  # For testing

