[package]
name = "feagi-connector-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Adds Caching and Processing systems that are used by Feagi Connector"
repository.workspace = true
homepage.workspace = true


[dependencies]
ndarray = { workspace = true, features = ["rayon"] }
feagi-data-structures = { workspace = true }
feagi-data-serialization = { workspace = true }
image = {workspace = true}
rayon = { workspace = true}
paste = { workspace = true}
serde = { workspace = true }
serde_json = {workspace = true}
tracing = "0.1"

[dev-dependencies]
clap = { version =  "4.5.53", features = ["derive"] }
