[package]
name = "feagi-embedded"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform abstraction and implementations for FEAGI embedded systems"

[lib]
name = "feagi_embedded"
path = "src/lib.rs"

[dependencies]
# Core FEAGI crates (always included)
feagi-types = { path = "../feagi-types" }
feagi-neural = { path = "../feagi-neural" }
feagi-synapse = { path = "../feagi-synapse" }
feagi-runtime-embedded = { path = "../feagi-runtime-embedded" }

# Platform-specific HALs (all optional, enabled via features)
esp-idf-svc = { version = "0.49", optional = true, features = ["binstart"] }
esp-idf-hal = { version = "0.44", optional = true }
esp-idf-sys = { version = "0.35", optional = true }
embedded-hal = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }

# Arduino HAL (future)
# arduino-hal = { version = "0.1", optional = true }

# STM32 HALs (future)
# stm32f4xx-hal = { version = "0.16", optional = true }
# stm32h7xx-hal = { version = "0.15", optional = true }

# ARM Cortex-M HALs (future)
# rp2040-hal = { version = "0.9", optional = true }
# nrf52840-hal = { version = "0.17", optional = true }

# Neural accelerators (future)
# hailo-sdk = { version = "1.0", optional = true }

[features]
default = []

# Microcontroller platforms
esp32 = ["esp-idf-svc", "esp-idf-hal", "esp-idf-sys", "embedded-hal", "log"]
esp32-s3 = ["esp32"]
esp32-c3 = ["esp32"]

# Arduino platforms (future)
# arduino-due = ["arduino-hal", "embedded-hal"]
# arduino-mega = ["arduino-hal", "embedded-hal"]

# STM32 platforms (future)
# stm32f4 = ["stm32f4xx-hal", "embedded-hal"]
# stm32h7 = ["stm32h7xx-hal", "embedded-hal"]

# ARM platforms (future)
# rpi-pico = ["rp2040-hal", "embedded-hal"]
# nrf52 = ["nrf52840-hal", "embedded-hal"]

# Neural accelerators (future)
# hailo = ["hailo-sdk"]
# coral-tpu = ["edgetpu-rs"]

# RTOS (future)
# freertos = ["freertos-rust"]
# zephyr = ["zephyr-sys"]

# Convenience bundles
all-esp32 = ["esp32", "esp32-s3", "esp32-c3"]
# all-arduino = ["arduino-due", "arduino-mega"]
# all-stm32 = ["stm32f4", "stm32h7"]
# all-accelerators = ["hailo", "coral-tpu"]

[dev-dependencies]
# For tests (if needed)

# Note: Profile settings are defined in workspace root Cargo.toml

