[package]
name = "feagi-embedded"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform abstraction and implementations for FEAGI embedded systems"

[lib]
name = "feagi_embedded"
path = "src/lib.rs"

[dependencies]
# Core FEAGI crates (always included)
feagi-npu-neural = { path = "../feagi-npu/neural" }  # Includes types + synapse + models
feagi-npu-runtime-embedded = { path = "../feagi-npu/runtime-embedded" }

# Error handling
anyhow = "1.0"

# Platform-specific HALs (all optional, enabled via features)
# Compatible with ESP-IDF v4.4.7 (broad version ranges to accept git patches)
esp-idf-svc = { version = ">=0.49", optional = true, default-features = false, features = ["binstart"] }
esp-idf-hal = { version = ">=0.44", optional = true }
esp-idf-sys = { version = ">=0.35", optional = true, default-features = false, features = ["binstart"] }
embedded-hal = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
heapless = "0.8"

# Arduino Due HAL (SAM3X8E - ARM Cortex-M3)
# Note: Arduino Due uses Atmel SAM3X8E chip
# There's no dedicated arduino-due-hal, so we use generic embedded-hal + cortex-m
cortex-m = { version = "0.7", optional = true }
panic-halt = { version = "0.2", optional = true }

# STM32 HALs
stm32f4xx-hal = { version = "0.21", optional = true, features = ["stm32f407"] }
cortex-m-rt = { version = "0.7", optional = true }

# Raspberry Pi Pico HAL
rp2040-hal = { version = "0.10", optional = true }
rp2040-boot2 = { version = "0.3", optional = true }

# ARM Cortex-M HALs (future)
# nrf52840-hal = { version = "0.17", optional = true }

# Neural accelerators
# Note: Hailo uses C/C++ HailoRT library, we'll create FFI bindings
# For now, we'll implement the architecture without external dependencies
# Real implementation would use: libhailort-sys (custom FFI crate)

[features]
default = []

# Microcontroller platforms
esp32 = ["esp-idf-svc", "esp-idf-hal", "esp-idf-sys", "embedded-hal", "log"]
esp32-s3 = ["esp32"]
esp32-c3 = ["esp32"]

# Arduino platforms
arduino-due = ["embedded-hal", "cortex-m", "cortex-m-rt", "panic-halt"]
# arduino-mega = ["avr-hal-generic"]  # Future: AVR architecture, different toolchain

# STM32 platforms
stm32f4 = ["stm32f4xx-hal", "embedded-hal", "cortex-m", "cortex-m-rt"]
# stm32h7 = ["stm32h7xx-hal", "embedded-hal", "cortex-m", "cortex-m-rt"]  # Future

# ARM platforms
rpi-pico = ["rp2040-hal", "rp2040-boot2", "embedded-hal", "cortex-m", "cortex-m-rt"]
# nrf52 = ["nrf52840-hal", "embedded-hal", "cortex-m", "cortex-m-rt"]  # Future

# Neural accelerators
hailo = []  # Architecture implemented, FFI bindings needed for hardware
# coral-tpu = ["edgetpu-rs"]  # Future

# RTOS (future)
# freertos = ["freertos-rust"]
# zephyr = ["zephyr-sys"]

# Convenience bundles
all-esp32 = ["esp32", "esp32-s3", "esp32-c3"]
all-arduino = ["arduino-due"]  # Future: add arduino-mega when AVR support ready
all-stm32 = ["stm32f4"]  # Future: add stm32h7
all-arm-cortex-m = ["arduino-due", "stm32f4", "rpi-pico"]
all-accelerators = ["hailo"]  # Future: add coral-tpu, movidius
all-platforms = ["all-esp32", "all-arduino", "all-stm32", "all-arm-cortex-m", "all-accelerators"]

[dev-dependencies]
# For tests (if needed)

# Note: Profile settings are defined in workspace root Cargo.toml

