[package]
name = "feagi-inference-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone FEAGI neural inference engine with online learning"

[lib]
name = "feagi_inference_engine"
path = "src/lib.rs"

[[bin]]
name = "feagi-inference-engine"
path = "src/main.rs"

[dependencies]
# FEAGI Components
feagi-types = { path = "../feagi-types" }
feagi-config = { path = "../feagi-config" }
feagi-burst-engine = { path = "../feagi-burst-engine" }
feagi-connectome-serialization = { path = "../feagi-connectome-serialization" }
feagi-pns = { path = "../feagi-pns" }
feagi_data_structures.workspace = true
feagi_data_serialization.workspace = true

# ZMQ for agent communication
zmq = "0.10"

# CLI and Config
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ctrlc = "3.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime and signals
tokio = { version = "1.40", features = ["full"] }
signal-hook = "0.3"

# Logging
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tempfile = "3.8"
ahash.workspace = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

