[package]
name = "feagi-io"
version = "0.0.1-beta.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "FEAGI I/O System"

[features]
default = ["zmq-transport"]
zmq-transport = ["dep:zmq"]
ws-transport = ["dep:async-tungstenite", "dep:async-net", "dep:futures-util"] # not wasm compatible
ws-transport-wasm = [] # WASM WebSocket implementation
udp-transport = []


#udp-transport = ["dep:tokio", "dep:async-trait", "dep:num_cpus"]  # Async, best-effort transport
#shm-transport = []                            # Shared memory (no extra deps, future)
#websocket-transport = ["udp-transport", "dep:tokio-tungstenite", "dep:futures-util"]  # WebSocket requires tokio, tungstenite, futures
#all-transports = ["zmq-transport", "udp-transport", "shm-transport", "websocket-transport"]
#connectome-serialization = ["bincode", "connectome-compression"]  # Connectome file I/O (types in feagi-npu-neural)
#connectome-compression = []  # LZ4 compression for connectome files (lz4 already in dependencies)

[dependencies]
async-trait = "0.1.89"  # Async traits for dyn-compatible async methods

#feagi-npu-burst-engine = { version = "0.0.1-beta.4", path = "../feagi-npu/burst-engine" }
#feagi-brain-development = { version = "0.0.1-beta.4", path = "../feagi-brain-development" }  # For CorticalAreaExt
#feagi-services = { version = "0.0.1-beta.4", path = "../feagi-services" }  # For GenomeService and ConnectomeService
#feagi-npu-neural = { version = "0.0.1-beta.4", path = "../feagi-npu/neural" }  # For types
# FEAGI data structures and serialization (for binary XYZP format)
feagi-structures.workspace = true
feagi-serialization = { workspace = true }

# Core dependencies (always required)
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#anyhow = "1.0"
#base64 = "0.22"
#crossbeam = "0.8"
#parking_lot = "0.12"
#ahash.workspace = true
# thiserror = "1.0"
# lz4 = "1.28"  # LZ4 compression (used by multiple transports)
#tracing = { workspace = true }  # Structured logging
# url = "2.5.8" # for URL support

# Connectome serialization dependencies (optional, behind feature)
# bincode = { version = "1.3", optional = true }  # Fast binary serialization

# Optional transport-specific dependencies (consolidated from feagi-transports)
#tokio = { version = "1.0", features = ["full"], optional = true }  # Async runtime (UDP, WebSocket)

# num_cpus = { version = "1.16", optional = true }  # CPU detection for UDP

# futures-util = { version = "0.3", optional = true }  # WebSocket utilities

# Specific Dependencies
# ZMQ (have to use the C based package as it supports blocking configs)
zmq = { version = "0.10.0", optional = true }  # ZMQ transport

# Websocket (nonwasm) - runtime-agnostic
async-tungstenite = { version = "0.28", optional = true }
async-net = { version = "2.0", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Examples that test both ZMQ and WebSocket transports
[[example]]
name = "pub_sub"
required-features = ["zmq-transport", "ws-transport"]

[[example]]
name = "push_pull"
required-features = ["zmq-transport", "ws-transport"]

[[example]]
name = "request_reply"
required-features = ["zmq-transport", "ws-transport"]


[lib]
name = "feagi_io"
path = "src/lib.rs"
