[package]
name = "feagi-neural"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-agnostic neural dynamics algorithms for FEAGI"

[features]
default = []
std = []

[dependencies]
# Pure no_std dependencies only
feagi-types = { path = "../feagi-types" }

[dev-dependencies]
# For tests only


