[package]
name = "feagi-neural"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-agnostic neural computation: types, algorithms, and neuron models"

[features]
default = ["std"]
std = ["serde"]

[dependencies]
# Optional std dependencies
serde = { workspace = true, optional = true }
ahash = { workspace = true, optional = true }

# Temporary during migration (Phase 2c)
feagi-types = { path = "../feagi-types", optional = true }

[dev-dependencies]
# For tests only


