[package]
name = "feagi-plasticity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "FEAGI plasticity algorithms - STDP and memory formation"
publish = false

[dependencies]
feagi-types = { path = "../feagi-types" }
thiserror.workspace = true
rayon.workspace = true
ahash.workspace = true
sha2 = "0.10"

[features]
default = []




