[package]
name = "feagi-plasticity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "FEAGI plasticity algorithms - STDP and memory formation"

[dependencies]
feagi-neural = { path = "../feagi-neural" }  # For NeuronId
thiserror.workspace = true
rayon.workspace = true
ahash.workspace = true
sha2 = "0.10"

[features]
default = []




